# the_ephergent_grand_plan

./: CLAUDE.md  EPHERGENT_CHARACTERS.md  EPHERGENT_SEASONS.md  EPHERGENT_STYLE.md  EPHERGENT_UNIVERSE.md  GRAND_MASTER_PLAN.md  LITERARY_AUDIT.md  README.md  REVISION_PLAN.md  SKILL.md  THE_EPHERGENT_SIGNAL_refactoring_report.md  TODO.md  TTS_PIPELINE_README.md  generate_epub.py
ARCHIVE/: IMPECCABLE_CRITIQUE.md  (+5 more)
source_archive/ephergent_season_03_generator/: .gitignore  DEPLOYMENT_READY.md  MCP_INTEGRATION_PLAN.md  METRICS_GUIDE.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_QUICK_REFERENCE.md  PHASE_1.2_ERROR_HANDLING_DESIGN.md  PHASE_1.2_EXECUTIVE_SUMMARY.md  PHASE_1_3_ARCHITECTURE.md  PHASE_1_3_IMPLEMENTATION_SUMMARY.md  PHASE_1_3_QUICK_REFERENCE.md  PHASE_1_ARCHITECTURE.md  PHASE_1_ARCHITECTURE_DIAGRAMS.md  PHASE_1_IMPLEMENTATION_CHECKLIST.md  PHASE_1_INDEX.md  PHASE_1_QUICK_REFERENCE.md  PHASE_1_SUMMARY.md  README.md  TRANSMISSION_ENDED_PAGE.md  config.py  env-example  main.py  manage_auth.py  migrate.py  nginx-local.conf  pyproject.toml  worker.py  wsgi.py
source_archive/ephergent_season_03_generator/ephergent_generator/: __init__.py  models.py
source_archive/ephergent_season_03_generator/mcp_server/: MCP-Authorization  MCP-Transports.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_QUICKSTART.md  MCP_SETUP_CHECKLIST.md  README_MCP.md  README_SSE.md  claude_desktop_config.example.json  claude_desktop_config_uv.example.json  mcp_server.py  mcp_server_sse.py  setup_mcp.sh  test_mcp_server.py
source_archive/ephergent_season_03_generator/monitoring/: GRAFANA_SETUP.md  grafana-dashboard.json  grafana-security.ini  prometheus-alerts.yml
(+732 files in other folders)
